--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
-}
+  display:flex;
+  justify-content:space-between;
+  align-items : center;
+  padding: 8px;
+ 
+  }
 
 .logo {
   font-size: 48px;
@@ -9,11 +14,12 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  display: flex;
 }
 
 ul {
   /* this removes the dots on the list items*/
-  list-style-type: none;
+  list-style-type: none;  
 }
 
 a {
@@ -22,4 +28,18 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.right-links > ul {
+  display:flex;
+  gap: 8px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.left-links > ul {
+  display: flex;
+  gap: 8px;
+  margin: 0px;
+  padding: 0px;
 }
