--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -7,9 +8,13 @@ img {
   height: 100px;
 }
 
+
 .title {
+  display: flex;
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+  justify-content: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +28,60 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.planterbox {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant1 {
+  display: flex;
+  gap: 52px;
+  flex-basis: 200px;
+	flex-grow: 0;
+	flex-shrink: 0;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.plant2 {
+  display: flex;
+  gap: 52px;
+  flex-basis: 200px;
+	flex-grow: 0;
+	flex-shrink: 0;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.plant3 {
+  display: flex;
+  gap: 52px;
+  flex-basis: 200px;
+	flex-grow: 0;
+	flex-shrink: 0;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.plant4 {
+  display: flex;
+  gap: 52px;
+  flex-basis: 200px;
+	flex-grow: 0;
+	flex-shrink: 0;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.text {
+  display:flex;
+  order: 3;
+  flex-direction: column;
+  align-items: center;
 }
