--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,59 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin-left: 4px;
+  margin-right: 4px;
+  padding: 4px;
+
 }
 
 .content {
   background: #e3f4ff;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-bottom:8px;
+  margin-left: 4px;
+  margin-right: 4px;
+
+
+
 }
 
 .button-container {
   background: #e3f4ff;
+  margin : 4px;
+  padding: 8px;
+  text-align: center;
+  
+  
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  font-size: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+  margin-top:8px;
+  margin: auto;
+ 
+  
+  
+  
+
+  
+  
+
 }
