--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 24px;
 }
 
 input {
@@ -25,3 +28,46 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.left-links {
+  display: flex;
+  list-style-type: none;
+  
+
+}
+
+.right-links {
+  display: flex;
+  list-style-type: none;
+  
+}
+
+.header {
+  margin-bottom: auto;
+  display: flex;
+  justify-content:space-between;
+  }
+
+.content{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer  {
+  background-color: #eeeeee;
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+a:hover, a:visited, a:link, a:active {
+
+  text-decoration: none;
+  color: #6a6a6a;
+  padding: 16px;
+  margin: 4px;
+  gap: 16px;
+  
+}
+
