--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,76 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
+  display: flex;
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+  align-items: center;
+  
 }
 
 .footer {
+  display: flex;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  align-items: center;
+  justify-content: center;
+  margin-top: auto;
 }
 
 .sidebar {
+  display: flex;
   width: 300px;
+  min-height: 100vh;
   background: royalblue;
+  padding: 16px;
+  flex: 1 0 300px;
+  padding: 32px;
+  text-decoration: none;
 }
 
 .card {
+  display: flex;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  justify-content: space-around;
+  margin: 16px;
+  width: 300px;
+  
+}
+
+ul{
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+li > a{
+  text-decoration: none;
+  font-size: 24px;
+  color : white;
+}
+.content {
+  display: flex;
+  flex-direction: row;
+  
+}
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  
+
 }
